# nelder-mead

./: CMakeLists.txt  README.md  _clang-format  example.cpp  nelder-mead.h
